--- a/app/src/main/res/layout/user_item_layout.xml
+++ b/app/src/main/res/layout/user_item_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="10dp" >
+    android:padding="10dp"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/user_item_layout_initials"
@@ -12,24 +12,27 @@
         android:layout_centerVertical="true"
         android:background="@drawable/circular_label"
         android:gravity="center"
-        android:text="AH"
         android:textSize="10sp" />
 
-    <TextView android:id="@+id/user_item_layout_name"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Abed El Chmaytilli"
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@id/user_item_layout_initials"
-        />
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical"
+        android:paddingLeft="5dp" >
 
-    <TextView android:id="@+id/user_item_layout_email"
-        android:layout_below="@id/user_item_layout_name"
-        android:layout_toRightOf="@id/user_item_layout_initials"
-        android:layout_width="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:text="ashmaitelli@gmail.com" />
+        <TextView
+            android:id="@+id/user_item_layout_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/user_item_layout_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp" />
+    </LinearLayout>
+
+
+</LinearLayout>
