--- a/app/src/main/res/layout/user_profile_dialog_layout.xml
+++ b/app/src/main/res/layout/user_profile_dialog_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp">
@@ -28,7 +28,6 @@
             android:ellipsize="end"
             android:lines="1"
             android:paddingLeft="5dp"
-            android:text="Abed Chmaytilli"
             />
     </RelativeLayout>
 
