--- a/app/src/main/res/layout/task_edit_layout.xml
+++ b/app/src/main/res/layout/task_edit_layout.xml
@@ -187,6 +187,17 @@
                         android:paddingTop="22dp"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
+                    <android.support.v7.widget.AppCompatImageButton
+                        android:id="@+id/task_edit_layout_remove_due_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:background="@color/colorWhite"
+                        android:paddingRight="15dp"
+                        android:visibility="invisible"
+                        android:src="@drawable/ic_menu_remove" />
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0.8dp"
@@ -236,7 +247,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal" android:visibility="gone">
 
                 <android.support.v7.widget.AppCompatImageButton
                     android:layout_width="wrap_content"
